LIST OF CHANGES FOR NPG-QC PACKAGE

 - Use samplesheet test data instead of XML files.
   Remove all cached LIMS and NPG XML feeds from t/data/autoqc and
   t/data/autoqc/insert_size. Change the tests to use newly generated
   samplesheets in t/data/autoqc/samplesheets. The samplesheets are
   manually edited to reproduce previously available test cases.

release 69.9.0 
 - Change database column type from unsigned int to insigned bigint
   for columns where we store number of reads and similar values and
   where we do not already set type to bigint. Some NovaSeq runs produce
   more data than we envisaged when these tables were set up.
 - Update pulldown_metrics autoqc check to use the up-to-date Picard
   metrics via GATK, use CRAM files instead of BAM files as input.  
 - Drop redundant tag_index column from the tag_metrics QC database
   table. The results of this QC check are always per lane. Only two
   distinct values in this culumn - NULL and -1, the latter from pre-
   composition times.

release 69.8.1
 - bug fix npg_substitution_metrics.pl to not bail on single read data

release 69.8.0
 - mqc skipper - a more generic way to disregard spiked-in controls when
   counting the number of studies the samples in the run belong to. The change
   is driven by the fact that spiked-in controls can now belong to a number of
   different studies.
 - replace fastx_toolkit use with seqtk
 - npg_substitution_metrics.pl script clean-up

release 69.7.0
 - added new npg_substitution_metrics.pl script
 - move from Travis CI to GitHub Actions
 - switch to node 14 for CI, using npm from default conda pkg
 - remove dependency on npg_common::sequence::reference::base_count, which
   has been moved to an internal repository and is no longer available for
   the CI builds
 - make labels for number of reads in SeqQC generic artic display
   consistent with display for bam flagstats data, ie use 'reads'
   instead of 'fragments'